--- a/index.html
+++ b/index.html
@@ -1,64 +1,93 @@
 
-<html xmlns="http://www.w3.org/1999/xhtml" slick-uniqueid="3"><head>
-<meta http-equiv="Content-Type" content="text/html;  charset=GBK">
-
-<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0">
-<title>借贷宝官方指定邀请码</title>
-<style>
-body{margin:0px;padding:0px;line-height:150%; font-family:微软雅黑;background:#9FF}
-</style>
-<style type="text/css"></style></head>
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<script src="http://siteapp.baidu.com/static/webappservice/uaredirect.js" type="text/javascript"></script>
+<script type="text/javascript">uaredirect("http://www.jiedaibaohn.com/m/");</script> 
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>借贷宝</title>
+<meta name="keywords" content="借贷宝官网,借款,借钱,赚钱,理财" />
+<meta name="description" content="借贷宝是国内顶级私募机构九鼎控股倾力打造的熟人间借贷平台。以借款人实名、出借人匿名的单向匿名借贷模式，使借款人能够快速获得借款，出借人根据借款人身份主动评估风险，获得更安全的高收益，是你手机上必备的借钱神器，赚钱利器。人脉变钱脉，就能玩出钱！" />
+<link rel="stylesheet" href="http://www.jiedaibaohn.com/css.css">
+</head>
 <body>
-<div style="width:320px;margin:0px auto;background:#FFF">
-<table width="100%" border="0" cellspacing="0" cellpadding="0">
-  <tbody>
-  
+<div class="layout">
+  <div class="top1"><img src="images/top1.jpg" width="1420" height="503" /></div>
+  <div class="top2"><img src="images/top2.jpg" width="1420" height="300" /></div>
+  <div class="left">
+    <div class="title">借贷宝投资20亿元邀请用户注册官方活动网站</div>
+    <div class="contont red" style="font-size:30px" >拉上好友抢现金 轻轻松松玩出钱”借贷宝大型推广活动介绍</div>
+    <div class="k"></div>
+    <div class="title">40元领取教程</div>
+    <div class="contont">一、扫本站二维码下载，或自己在手机上下载借贷宝，并安装app。<br />
+     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 注：必须在本官方站下载，以便得到奖金和保障账户安全。<br />
+      二、注册，输入<span class="red">官方邀请码：201YAHB </span>并登陆，进入app。<br />
+      三、登陆后，点击“我”——“钱包”，显示有20-40元不等余额，点击“提现”，提现要进行实名认证，绑定银行卡，就可提现到你的银行卡里。<br />
+      <span class="red">（建议：绑定工行和农行银行卡并开通有在线支付功能，以便成功绑卡。）</span></div>
+    <div class="k"></div>
+    <div><img src="images/r6.jpg" width="470" height="249" /></div>
+    <div class="title">活动详情</div>
+    <div class="contont">登录借贷宝客户端，分享你的邀请链接，邀请新用户接受邀请可获20元现金，新用户绑定银行卡，你可获得20元邀请奖励，你邀请每一位用户，再邀请其他一名新用户，你可再获10元奖金。
+邀请用户越多，获得奖励越多。<br />
+邀请好友方法：打开借贷宝APP，点击首页拉上好友抢现金进入，点击我要邀请可分享到微信好友和QQ好友。好友注册时填写你的邀请码你和好友各得20元奖金。</div>
+    <div class="k"></div>
+    <div><img src="images/left_gg2.jpg" width="870" height="458" /></div>
+    <div class="k"></div>
+    <div class="contont">在活动中，如果你成功邀请了100位新用户，可获得2000元。如果他们每个人再分别成功邀请100名用户，您即能获得10万元。那么….你最终能获得10.2万元！！ 
+邀请无上限，奖金无上限！！</div>
+    <div class="k"></div>
+    <div><img src="images/left_gg3.jpg" width="660" height="300" /></div>
+    <div class="k"></div>
+    <div class="contont red">重要声明
+      <br />
+      绑定银行卡时跳转到银联在线页面，需要输入银行卡密码，请放心输入，银行卡账户安全由中国人民财产保险股份有限公司承保。
+（招商和民生银行卡不需输入密码，带有银联标识除地方性银行以
+外均可绑定，绑卡中如有任何问题，请致电银联客服95516。）</div>
+    <div class="k"></div>
+    <div><img src="images/left_gg4.jpg" width="480" height="357" /></div>
+  </div>
 
-  <tr><td colspan="2">
-    <p></p></td></tr>
-</tbody></table>
- <div style="padding:10px;color:#FFF;background:#F00">请认准借贷宝官方指定邀请码：<font color="#FFFF00">H36DY27</font> </div>
-  <div style="color:green;font-size:20px;line-height:150%;font-weight:bold;padding-left:80px;"><br>借贷宝20元领取说明<br>
+  <div class="right">
+    <div><img src="images/r1.jpg" width="470" height="365" /></div>
+    <div class="title">关于我们</div>
+    <div class="contont2">借贷宝拉上好友抢现金，轻轻松松即可玩出钱。通过扫描本店二维码下载借贷宝官方APP,然后登录借贷宝客户端，分享你的邀请链接,邀请新用户接受邀请可获得20元现金。新用户绑定银行卡，你可获得20元邀请奖励。你邀请每一位用户，再邀请其他一名新用户，你可在获10元奖励。邀请用户越多，获得奖励越多。
+下载借贷宝，人脉变钱脉。人人都是金融家；了解这么多借贷宝，还不快来体验一下？借贷宝值得你拥有。
+    </div>
+    <div class="k"></div>
+    
+    <div class="title2">借贷宝央视广告</div>
+    <div><embed src="http://player.youku.com/player.php/sid/XMTMxNDM1MTYwMA==/v.swf" allowFullScreen="true" quality="high" width="470" height="320" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed></div>
+    <div class="k"></div>
+    <div class="title2">借贷宝新闻发布会</div>
+    <div><embed src="http://player.youku.com/player.php/sid/XMTMwOTA4MTc5Ng==/v.swf" allowFullScreen="true" quality="high" width="470" height="320" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed></div>
+    <div class="k"></div>
+    <div><img src="images/r7.jpg" width="470" height="249" /></div>
+    <div class="k"></div>
+    <div><img src="images/r3.jpg" width="470" height="332" /></div>
+    <div class="k"></div>
+    <div><img src="images/r4.jpg" width="470" height="340" /></div>
+    
+  </div>
+  <div id="dg"></div>
+  <div class="foot">
+    <table width="100%" border="0" cellspacing="0" cellpadding="0">
+  <tr>
+    <td width="8%" align="center">&nbsp;</td>
+    <td width="34%"><div class="contont2" style="color:#666" >客服电话：400-100-6699&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;地址：北京市西城区金融大街7号英蓝国际金融中心D座6层<br />
+      公司总机：010-66010650&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;客服邮箱：service@jiedaibao.com
+     </div></td>
+    <td width="21%" align="right"><div class="contont2" style="color:#666" >诚招各地地推商代理,地推渠道负责加<br />微信Q1031800272 </div>
+      </td>
+    <td width="2%">&nbsp;</td>
+    <td width="35%">
+    <img src="images/foot1.jpg" alt="" width="368" height="130" />
+    </td>
+  </tr>
+</table>
+  </div>
+
 </div>
-<ul>
-<li>1.必须在注册时填写邀请码<br><p></p><p></p><center><font clolor=green><strong>H36DY27</strong></font></center><p></p></li>
-<li>2.每人 每部手机限领1次</li><br>
-<li>3.如没安装借贷宝app <br>复制邀请码 手机访问<br>
-www.jiedaibao.com <br>安装后注册填写</li><br>
-<li>4.奖励现金可以立即提现到银行卡 一般2个小时到账</li><br>
-<li>5.最终解释权归借贷宝公司所有</li><br>
-</ul>
-
-<div style="background:green;padding:10px;color:#FFF;font-weight:bold;">20元现金提现教程</div>
-<ul>
-<li>1.<b>登陆借贷宝app-点击“我”——“钱包”</b><br><img src=http://www.chinaoriginal.com.cn/jiedaibao/style/images/TB2k.pceFXXXXcdXpXXXXXXXXXX_!!196076713.jpg width=250></li>
-<li>2.<b>显示有20元余额，点击“提现”</b><br><img src=http://www.chinaoriginal.com.cn/jiedaibao/style/images/TB2Gi8ueFXXXXbQXXXXXXXXXXXX_!!196076713.jpg width=250></li>
-</ul>
-
-
-
- <div style="padding:10px;color:#FFF;background:#F00">使用本站邀请码用户：加QQ<font color="#FFFF00">2065189831</font> 立即赠送借贷宝日赚100元教程</div>
-
-<div style="padding:10px;">
-  <h3 style="color:green">【关于借贷宝】</h3>
-  <p style="text-indent:2em;padding:0px;margin:0px;">借贷宝是由国内顶级私募机构九鼎控股倾力打造的互联网社交金融平台。公司的核心团</p>
-  <p style="text-indent:2em;padding:0px;margin:0px;">队皆来自国内外顶级金融机构、法律机构，以及百度、阿里、腾讯等顶尖互联网公司。</p>
-  <p style="text-indent:2em;padding:0px;margin:0px;">借贷宝首创熟人间单向匿名借贷模式（即借款人实名、出借人匿名），通过互联网人与人之间的连接机制，实现直接金融交易；利用熟人之间的天然关系，极大程度的减少甚至消除信息不对称；还利用熟人圈的声誉机制和信息收集便利，实现对恶意欠债者的天然约束与高效催收。
-  </p>
- 
-</div>
-
-
-
-</div>
-</div>
-<div style="height:50px;"></div>
- <div class="wap" style=" position:fixed; bottom:0px; width:100%; height:50px; background:#900; font-size:28px; text-align:center; line-height:50px; color:#fff;">长按复制邀请码：H36DY27</div>
-
-<div style="display:none">
-版权所有:华蓥市家家乐物业管理有限公司
- <script language="javascript" type="text/javascript" src="http://js.users.51.la/17401089.js"></script><a href="http://www.51.la/?17401089" target="_blank" title="51.La 网站流量统计系统"><img alt="51.La 网站流量统计系统" src="http://icon.51.la/icon_0.gif" style="border:none"></a>
-</div>
-
-</body></html>
+<script type="text/javascript">var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Ff851cea5ffefdf67f96475cd645a321f' type='text/javascript'%3E%3C/script%3E"));</script>
+<script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"0","bdSize":"16"},"slide":{"type":"slide","bdImg":"2","bdPos":"right","bdTop":"118"}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
+</body>
+</html>
