--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
 <div class="layout">
-  <div class="top1"><img src="images/top1.jpg" width="1420" height="503" /></div>
-  <div class="top2"><img src="images/top2.jpg" width="1420" height="300" /></div>
+  <div class="top1"><img src="http://ww1.sinaimg.cn/large/005uJx3ugw1ex38q47v9xj313g0dwn13.jpg" width="1420" height="503" /></div>
+  <div class="top2"><img src="http://ww4.sinaimg.cn/large/005uJx3ugw1ex38q4kgxej313g08cq4e.jpg" width="1420" height="300" /></div>
   <div class="left">
     <div class="title">借贷宝投资20亿元邀请用户注册官方活动网站</div>
     <div class="contont red" style="font-size:30px" >拉上好友抢现金 轻轻松松玩出钱”借贷宝大型推广活动介绍</div>
@@ -25,18 +25,18 @@
       三、登陆后，点击“我”——“钱包”，显示有20-40元不等余额，点击“提现”，提现要进行实名认证，绑定银行卡，就可提现到你的银行卡里。<br />
       <span class="red">（建议：绑定工行和农行银行卡并开通有在线支付功能，以便成功绑卡。）</span></div>
     <div class="k"></div>
-    <div><img src="images/r6.jpg" width="470" height="249" /></div>
+    <div><img src="http://ww4.sinaimg.cn/large/005uJx3ugw1ex38q3iu9rj30d206xdgp.jpg" width="470" height="249" /></div>
     <div class="title">活动详情</div>
     <div class="contont">登录借贷宝客户端，分享你的邀请链接，邀请新用户接受邀请可获20元现金，新用户绑定银行卡，你可获得20元邀请奖励，你邀请每一位用户，再邀请其他一名新用户，你可再获10元奖金。
 邀请用户越多，获得奖励越多。<br />
 邀请好友方法：打开借贷宝APP，点击首页拉上好友抢现金进入，点击我要邀请可分享到微信好友和QQ好友。好友注册时填写你的邀请码你和好友各得20元奖金。</div>
     <div class="k"></div>
-    <div><img src="images/left_gg2.jpg" width="870" height="458" /></div>
+    <div><img src="http://ww3.sinaimg.cn/large/005uJx3ugw1ex38q1jkrtj30o60cqtdr.jpg" width="870" height="458" /></div>
     <div class="k"></div>
     <div class="contont">在活动中，如果你成功邀请了100位新用户，可获得2000元。如果他们每个人再分别成功邀请100名用户，您即能获得10万元。那么….你最终能获得10.2万元！！ 
 邀请无上限，奖金无上限！！</div>
     <div class="k"></div>
-    <div><img src="images/left_gg3.jpg" width="660" height="300" /></div>
+    <div><img src="http://ww4.sinaimg.cn/large/005uJx3ugw1ex38q1xz3hj30o60b0myt.jpg" width="660" height="300" /></div>
     <div class="k"></div>
     <div class="contont red">重要声明
       <br />
@@ -44,11 +44,11 @@
 （招商和民生银行卡不需输入密码，带有银联标识除地方性银行以
 外均可绑定，绑卡中如有任何问题，请致电银联客服95516。）</div>
     <div class="k"></div>
-    <div><img src="images/left_gg4.jpg" width="480" height="357" /></div>
+    <div><img src="http://ww2.sinaimg.cn/large/005uJx3ugw1ex38q2bkbdj30nu0htgo7.jpg" width="480" height="357" /></div>
   </div>
 
   <div class="right">
-    <div><img src="images/r1.jpg" width="470" height="365" /></div>
+    <div><img src="http://ww3.sinaimg.cn/large/005uJx3ugw1ex38q2md8ij30d20a5mxy.jpg" width="470" height="365" /></div>
     <div class="title">关于我们</div>
     <div class="contont2">借贷宝拉上好友抢现金，轻轻松松即可玩出钱。通过扫描本店二维码下载借贷宝官方APP,然后登录借贷宝客户端，分享你的邀请链接,邀请新用户接受邀请可获得20元现金。新用户绑定银行卡，你可获得20元邀请奖励。你邀请每一位用户，再邀请其他一名新用户，你可在获10元奖励。邀请用户越多，获得奖励越多。
 下载借贷宝，人脉变钱脉。人人都是金融家；了解这么多借贷宝，还不快来体验一下？借贷宝值得你拥有。
@@ -61,11 +61,11 @@
     <div class="title2">借贷宝新闻发布会</div>
     <div><embed src="http://player.youku.com/player.php/sid/XMTMwOTA4MTc5Ng==/v.swf" allowFullScreen="true" quality="high" width="470" height="320" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed></div>
     <div class="k"></div>
-    <div><img src="images/r7.jpg" width="470" height="249" /></div>
+    <div><img src="http://ww4.sinaimg.cn/large/005uJx3ugw1ex38q3ugkyj30d206xab9.jpg" width="470" height="249" /></div>
     <div class="k"></div>
-    <div><img src="images/r3.jpg" width="470" height="332" /></div>
+    <div><img src="http://ww1.sinaimg.cn/large/005uJx3ugw1ex38q2wwlhj30d20980um.jpg" width="470" height="332" /></div>
     <div class="k"></div>
-    <div><img src="images/r4.jpg" width="470" height="340" /></div>
+    <div><img src="http://ww4.sinaimg.cn/large/005uJx3ugw1ex38q39fxuj30d209g0vb.jpg" width="470" height="340" /></div>
     
   </div>
   <div id="dg"></div>
@@ -80,7 +80,7 @@
       </td>
     <td width="2%">&nbsp;</td>
     <td width="35%">
-    <img src="images/foot1.jpg" alt="" width="368" height="130" />
+    <img src="http://ww4.sinaimg.cn/large/005uJx3ugw1ex38q17raoj30a803mglw.jpg" alt="" width="368" height="130" />
     </td>
   </tr>
 </table>
