--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <title>借贷宝</title>
 <meta name="keywords" content="借贷宝官网,借款,借钱,赚钱,理财" />
 <meta name="description" content="借贷宝是国内顶级私募机构九鼎控股倾力打造的熟人间借贷平台。以借款人实名、出借人匿名的单向匿名借贷模式，使借款人能够快速获得借款，出借人根据借款人身份主动评估风险，获得更安全的高收益，是你手机上必备的借钱神器，赚钱利器。人脉变钱脉，就能玩出钱！" />
-<link rel="stylesheet" href="http://www.jiedaibaohn.com/css.css">
+<link rel="stylesheet" href="css.css">
 </head>
 <body>
 <div class="layout">
@@ -21,7 +21,7 @@
     <div class="title">40元领取教程</div>
     <div class="contont">一、扫本站二维码下载，或自己在手机上下载借贷宝，并安装app。<br />
      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 注：必须在本官方站下载，以便得到奖金和保障账户安全。<br />
-      二、注册，输入<span class="red">官方邀请码：201YAHB </span>并登陆，进入app。<br />
+      二、注册，输入<span class="red">官方邀请码：H6PMJKT </span>并登陆，进入app。<br />
       三、登陆后，点击“我”——“钱包”，显示有20-40元不等余额，点击“提现”，提现要进行实名认证，绑定银行卡，就可提现到你的银行卡里。<br />
       <span class="red">（建议：绑定工行和农行银行卡并开通有在线支付功能，以便成功绑卡。）</span></div>
     <div class="k"></div>
@@ -87,7 +87,5 @@
   </div>
 
 </div>
-<script type="text/javascript">var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Ff851cea5ffefdf67f96475cd645a321f' type='text/javascript'%3E%3C/script%3E"));</script>
-<script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"0","bdSize":"16"},"slide":{"type":"slide","bdImg":"2","bdPos":"right","bdTop":"118"}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
 </body>
 </html>
