--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <td width="34%"><div class="contont2" style="color:#666" >客服电话：400-100-6699&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;地址：北京市西城区金融大街7号英蓝国际金融中心D座6层<br />
       公司总机：010-66010650&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;客服邮箱：service@jiedaibao.com
      </div></td>
-    <td width="21%" align="right"><div class="contont2" style="color:#666" >诚招各地地推商代理,地推渠道负责加<br />微信Q1031800272 </div>
+    <td width="21%" align="right"><div class="contont2" style="color:#666" ></div>
       </td>
     <td width="2%">&nbsp;</td>
     <td width="35%">
